2007-02-22  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Correct escaping of destination. We will not crash
	  anymore when destination folder contains spaces or weirds chars.
	  Fixed a problem with lame parameters when using VBR and lowest 
	  quality.

2006-12-15  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: If id3v2mux is not present, we dump it instead of
	  crashing encoder.

2006-12-05  Gautier Portet <kassoulet gmail com>

	* po/pt_BR.po: Updated Brazilian translation.

2006-10-18  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fixed Tag writing when converting to mp3.
	  Fixed progress.

2006-10-15  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Only remove files when conversion was
	  sucessfull.
	* release 0.9.2

2006-10-12  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fixed (?) loading of badly encoded filenames.
	  now files encoded in latin-1 should be loadable instead of
	  triggering an UnicodeDecodeError.
	  (thanks Christopher)

2006-09-26  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Added an option to delete original files.
	 (thanks James)

2006-09-19  Gautier Portet <kassoulet gmail com>

	* po/fr.po: french translation updated, Thanks Guillaume.

2006-09-12  Gautier Portet <kassoulet gmail com>

	* po/sv_SE.po: new swedish translation, Thanks Daniel.

2006-09-07  Gautier Portet <kassoulet gmail com>

	* release 0.9.1

2006-09-06  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fix vorbis encoder.

2006-09-05  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Add a blacklist of mime type known not to have tags,
	to pass them faster.

2006-09-03  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fix quoting of tags when generating filenames.

2006-08-15  Gautier Portet <kassoulet gmail com>

	* po/pl.po: Updated polish translation.

2006-08-21  Gautier Portet <kassoulet gmail com>
